--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "thismeru",
+  "homepage": "https://raun0129.github.io/thismeru/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
